--- a/templates/index.j2
+++ b/templates/index.j2
@@ -1,8 +1,8 @@
 {% extends "main.j2" %}
-
+{%load static%}
 {% block main %}
 
- <header class="masthead" style="background-image: url('img/home-bg.jpg')">
+ <header class="masthead" style="background-image: url({%static 'img/home-bg.jpg'%})">
    <div class="overlay"></div>
     <div class="container">
       <div class="row">
