--- a/templates/main.j2
+++ b/templates/main.j2
@@ -55,7 +55,7 @@
     </div>
   </nav>
 
-
+ <header class="masthead" style="background-image: url({%static 'img/home-bg.jpg'%})">
   {% block main %}
   {% endblock %}
 
