--- a/templates/login.j2
+++ b/templates/login.j2
@@ -1,6 +1,6 @@
 {% extends "main.j2" %}
 
-{% block body %}
+{% block main %}
 
     <div class="overlay"></div>
     <div class="container">
@@ -9,6 +9,7 @@
                 <div class="site-heading">
                     <h2>Please, log in</h2>
                     <form method="post" action="/user_login">
+                    {% csrf_token %}
                         <input class="login-input" type="text" required placeholder="Username" name="username">
                         <br>
                         <input class="login-input" type="password" required placeholder="Password" name="password">
