--- a/templates/post.j2
+++ b/templates/post.j2
@@ -23,12 +23,16 @@
         <div class="col-lg-8 col-md-10 mx-auto">
           <img class="post-image" src="{{ image-source}}">
           <p> {{ text }}</p>
-          <a href="{{ video-link }}"> Watch a video here </a>
+          <iframe width="100%" height="450px" src="{{ video_link }}"
+          frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
       </div>
     </div>
   </article>
 
   <hr>
+
+<script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 
 {% endblock %}
