--- a/templates/main.j2
+++ b/templates/main.j2
@@ -29,7 +29,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand" href="index.html">P&S together</a>
+      <a class="navbar-brand" href="/">P&S together</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
@@ -40,14 +40,14 @@
             <a class="nav-link" href="/">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/">About</a>
+            <a class="nav-link" href="/about">About</a>
           </li>
-          {%if not user.is_authenticated%}
+          {% if not user.is_authenticated %}
           <li class="nav-item">
             <a class="nav-link" href="/login_form">Log In</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/">Sign Up</a>
+            <a class="nav-link" href="/signup">Sign Up</a>
           </li>
           {% else %}
           <li class="nav-item">
